# Secure-Python-Framework

./: .gitignore  559_hoch_2970.txt  MANIFEST.in  README.md  mapping.enc  possibilities.txt  pyproject.toml  requirements.txt  setup.py  test2.py  test_file.py
.github/workflows/: python-publish.yml
secure_python/: __init__.py  secure_python.py
secure_python/pyarmor_runtime_000000/: __init__.py  pyarmor_runtime.pyd
secure_python/secure/: test_file.enc
secure_python_framework/: README.md  pyproject.toml
secure_python_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
secure_python_framework/secure_python/: secure_python.py
test/: decode_test_use.py  encode_test_use.py  usage.py
