[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure_python"
version = "1.3.4"
description = "A framework for encoding and decoding text using custom mappings."
authors = [{ name = "Soundheard" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pycryptodome"]  

[tool.setuptools]
packages = ["secure_python"]
include-package-data = true 
